[POM] - Resetting version to 1.0-SNAPSHOT in master branch