@@ -6,7 +6,7 @@
     <groupId>com.bankbazaar</groupId>
     <artifactId>brint</artifactId>
     <packaging>pom</packaging>
-    <version>16.02.18</version>
+    <version>1.0-SNAPSHOT</version>
     <name>Bankbazaar</name>
     <url>http://www.bankbazaar.com</url>
 
@@ -47,6 +47,7 @@
                 <configuration>
                     <parallel>classes</parallel>
                     <useUnlimitedThreads>true</useUnlimitedThreads>
+                    <argLine>@{argLine} -Xmx1536m -XX:MaxPermSize=512m -XX:PermSize=192m</argLine>
                     <argLine>@{argLine} -Xmx1536m -XX:MaxPermSize=512m -XX:PermSize=192m</argLine>
                     <forkCount>3</forkCount>
                     <reuseForks>true</reuseForks>
